<resources>
    <string name="logo">logo</string>
    <string name="aspect_ratio">Aspect Ratio</string>
    <string name="effects_style">Effects | Style</string>
    <string name="inspiration">Inspiration</string>
    <string name="generate">Generate</string>
    <string name="drag_and_drop_or_browse">Drag and drop or browse</string>
    <string name="discover_more">Discover More</string>
    <string name="upload_or_browse">Upload or browse</string>
    <string name="select_effects">Select Effects</string>
    <string name="select_style">Select Style</string>
    <string name="all">All</string>
    <string name="popular">Popular</string>
    <string name="no_style">No style</string>
    <string name="don_t_include">Don\'t include...</string>
    <string name="cfg_scale">CFG Scale</string>
    <string name="select_photo">Select photo</string>
    <string name="crop">Crop</string>
    <string name="next">Next</string>
    <string name="upload">Upload</string>
    <string name="change">Change</string>
    <string name="image_to_image">Image to image</string>
    <string name="generative_fill">Generative fill</string>
    <string name="advance_settings">Advance Settings</string>
    <string name="enter_prompt">Enter prompt...</string>
    <string name="type_what_you_want_to_insert">Type what you want to insert</string>
    <string name="brush">Brush</string>
    <string name="eraser">Eraser</string>
    <string name="generate_more">Generate more</string>
    <string name="variate">Variate</string>
    <string name="tap_to_edit_input">Tap to edit Input</string>
    <string name="what_do_you_want_to_create">What do you want to create?</string>
    <string name="try_now">Try Now</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
</resources>