<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- top view-->
            <View
                android:id="@+id/gallery_view"
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/spacing10"
                android:layout_marginEnd="@dimen/spacing10"
                android:background="@drawable/bg_boarder_gap"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="225dp">
            </View>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toTopOf="@+id/top_view_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gallery_view"
                app:srcCompat="@drawable/gallery_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/top_view_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drag_and_drop_or_browse"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/gallery_view"
                app:layout_constraintEnd_toEndOf="@+id/gallery_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/gallery_view" />

            <!-- Discover More view-->

            <TextView
                android:id="@+id/dc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_more"
                android:textSize="14dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="@+id/gallery_view"
                app:layout_constraintTop_toBottomOf="@+id/gallery_view"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dc_rv"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/dc_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>



            <!-- btnGenerate view-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnGenerate"
                android:layout_width="210dp"
                android:layout_height="@dimen/size_50dp"
                android:layout_marginTop="@dimen/_20dp"
                android:background="@drawable/generate_output_bg"
                app:layout_constraintEnd_toEndOf="@id/dc_rv"
                app:layout_constraintStart_toStartOf="@id/dc_rv"
                app:layout_constraintTop_toBottomOf="@+id/top_view_txt">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/g_txt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/image_gallery" />

                <TextView
                    android:id="@+id/g_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="@string/upload"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>